Patito/src/Patito.Compiler/.antlr/PatitoParser.java
// Generated from /Users/vicm/Library/CloudStorage/OneDrive-InstitutoTecnologicoydeEstudiosSuperioresdeMonterrey/Sem 8/Desarrollo de Aplicaciones Avanzadas/Desarrollo-de-Aplicaciones-Avanzadas/Desarrollo-Aplicaciones-Ciencias-Computacionales/Patito/src/Patito.Compiler/Patito.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PatitoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		KW_PROGRAMA=1, KW_INICIO=2, KW_FIN=3, KW_VARS=4, KW_ENTERO=5, KW_FLOTANTE=6, 
		KW_NULA=7, KW_SI=8, KW_SINO=9, KW_MIENTRAS=10, KW_HAZ=11, KW_ESCRIBE=12, 
		OP_EQ=13, OP_NEQ=14, OP_ASIGNA=15, OP_LT=16, OP_GT=17, OP_MAS=18, OP_MENOS=19, 
		OP_POR=20, OP_DIV=21, SEMICOLON=22, COMA=23, LPAREN=24, RPAREN=25, LBRACE=26, 
		RBRACE=27, COLON=28, CTE_FLOT=29, CTE_ENT=30, ID=31, LETRERO=32, WS=33, 
		COMMENT_LINE=34, COMMENT_BLOCK=35;
	public static final int
		RULE_programa = 0, RULE_vars = 1, RULE_listado_vars = 2, RULE_lista_ids = 3, 
		RULE_tipo = 4, RULE_funcs = 5, RULE_typo_fun = 6, RULE_params = 7, RULE_func_body = 8, 
		RULE_cuerpo = 9, RULE_estatuto = 10, RULE_asigna = 11, RULE_condicion = 12, 
		RULE_ciclo = 13, RULE_imprime = 14, RULE_imp = 15, RULE_call_stmt = 16, 
		RULE_llamada = 17, RULE_args = 18, RULE_expresion = 19, RULE_rel_op = 20, 
		RULE_exp = 21, RULE_termino = 22, RULE_factor = 23, RULE_simple_atom = 24, 
		RULE_cte = 25;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "vars", "listado_vars", "lista_ids", "tipo", "funcs", "typo_fun", 
			"params", "func_body", "cuerpo", "estatuto", "asigna", "condicion", "ciclo", 
			"imprime", "imp", "call_stmt", "llamada", "args", "expresion", "rel_op", 
			"exp", "termino", "factor", "simple_atom", "cte"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'programa'", "'inicio'", "'fin'", "'vars'", "'entero'", "'flotante'", 
			"'nula'", "'si'", "'sino'", "'mientras'", "'haz'", "'escribe'", "'=='", 
			"'!='", "'='", "'<'", "'>'", "'+'", "'-'", "'*'", "'/'", "';'", "','", 
			"'('", "')'", "'{'", "'}'", "':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "KW_PROGRAMA", "KW_INICIO", "KW_FIN", "KW_VARS", "KW_ENTERO", "KW_FLOTANTE", 
			"KW_NULA", "KW_SI", "KW_SINO", "KW_MIENTRAS", "KW_HAZ", "KW_ESCRIBE", 
			"OP_EQ", "OP_NEQ", "OP_ASIGNA", "OP_LT", "OP_GT", "OP_MAS", "OP_MENOS", 
			"OP_POR", "OP_DIV", "SEMICOLON", "COMA", "LPAREN", "RPAREN", "LBRACE", 
			"RBRACE", "COLON", "CTE_FLOT", "CTE_ENT", "ID", "LETRERO", "WS", "COMMENT_LINE", 
			"COMMENT_BLOCK"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Patito.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PatitoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode KW_PROGRAMA() { return getToken(PatitoParser.KW_PROGRAMA, 0); }
		public TerminalNode ID() { return getToken(PatitoParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(PatitoParser.SEMICOLON, 0); }
		public VarsContext vars() {
			return getRuleContext(VarsContext.class,0);
		}
		public FuncsContext funcs() {
			return getRuleContext(FuncsContext.class,0);
		}
		public TerminalNode KW_INICIO() { return getToken(PatitoParser.KW_INICIO, 0); }
		public CuerpoContext cuerpo() {
			return getRuleContext(CuerpoContext.class,0);
		}
		public TerminalNode KW_FIN() { return getToken(PatitoParser.KW_FIN, 0); }
		public TerminalNode EOF() { return getToken(PatitoParser.EOF, 0); }
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PatitoListener ) ((PatitoListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PatitoListener ) ((PatitoListener)listener).exitPrograma(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			match(KW_PROGRAMA);
			setState(53);
			match(ID);
			setState(54);
			match(SEMICOLON);
			setState(55);
			vars();
			setState(56);
			funcs();
			setState(57);
			match(KW_INICIO);
			setState(58);
			cuerpo();
			setState(59);
			match(KW_FIN);
			setState(60);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarsContext extends ParserRuleContext {
		public TerminalNode KW_VARS() { return getToken(PatitoParser.KW_VARS, 0); }
		public Listado_varsContext listado_vars() {
			return getRuleContext(Listado_varsContext.class,0);
		}
		public VarsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vars; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PatitoListener ) ((PatitoListener)listener).enterVars(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PatitoListener ) ((PatitoListener)listener).exitVars(this);
		}
	}

	public final VarsContext vars() throws RecognitionException {
		VarsContext _localctx = new VarsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_vars);
		try {
			setState(65);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KW_VARS:
				enterOuterAlt(_localctx, 1);
				{
				setState(62);
				match(KW_VARS);
				setState(63);
				listado_vars();
				}
				break;
			case KW_INICIO:
			case KW_ENTERO:
			case KW_FLOTANTE:
			case KW_NULA:
			case KW_SI:
			case KW_MIENTRAS:
			case KW_ESCRIBE:
			case RBRACE:
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Listado_varsContext extends ParserRuleContext {
		public List<Lista_idsContext> lista_ids() {
			return getRuleContexts(Lista_idsContext.class);
		}
		public Lista_idsContext lista_ids(int i) {
			return getRuleContext(Lista_idsContext.class,i);
		}
		public List<TerminalNode> COLON() { return getTokens(PatitoParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(PatitoParser.COLON, i);
		}
		public List<TipoContext> tipo() {
			return getRuleContexts(TipoContext.class);
		}
		public TipoContext tipo(int i) {
			return getRuleContext(TipoContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(PatitoParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(PatitoParser.SEMICOLON, i);
		}
		public Listado_varsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listado_vars; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PatitoListener ) ((PatitoListener)listener).enterListado_vars(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PatitoListener ) ((PatitoListener)listener).exitListado_vars(this);
		}
	}

	public final Listado_varsContext listado_vars() throws RecognitionException {
		Listado_varsContext _localctx = new Listado_varsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_listado_vars);
		try {
			int _alt;
			setState(77);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(72); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(67);
						lista_ids();
						setState(68);
						match(COLON);
						setState(69);
						tipo();
						setState(70);
						match(SEMICOLON);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(74); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Lista_idsContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(PatitoParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PatitoParser.ID, i);
		}
		public List<TerminalNode> COMA() { return getTokens(PatitoParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(PatitoParser.COMA, i);
		}
		public Lista_idsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lista_ids; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PatitoListener ) ((PatitoListener)listener).enterLista_ids(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PatitoListener ) ((PatitoListener)listener).exitLista_ids(this);
		}
	}

	public final Lista_idsContext lista_ids() throws RecognitionException {
		Lista_idsContext _localctx = new Lista_idsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_lista_ids);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(ID);
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(80);
				match(COMA);
				setState(81);
				match(ID);
				}
				}
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TipoContext extends ParserRuleContext {
		public TerminalNode KW_ENTERO() { return getToken(PatitoParser.KW_ENTERO, 0); }
		public TerminalNode KW_FLOTANTE() { return getToken(PatitoParser.KW_FLOTANTE, 0); }
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PatitoListener ) ((PatitoListener)listener).enterTipo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PatitoListener ) ((PatitoListener)listener).exitTipo(this);
		}
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_tipo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			_la = _input.LA(1);
			if ( !(_la==KW_ENTERO || _la==KW_FLOTANTE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncsContext extends ParserRuleContext {
		public List<Typo_funContext> typo_fun() {
			return getRuleContexts(Typo_funContext.class);
		}
		public Typo_funContext typo_fun(int i) {
			return getRuleContext(Typo_funContext.class,i);
		}
		public List<TerminalNode> ID() { return getTokens(PatitoParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PatitoParser.ID, i);
		}
		public List<TerminalNode> LPAREN() { return getTokens(PatitoParser.LPAREN); }
		public TerminalNode LPAREN(int i) {
			return getToken(PatitoParser.LPAREN, i);
		}
		public List<ParamsContext> params() {
			return getRuleContexts(ParamsContext.class);
		}
		public ParamsContext params(int i) {
			return getRuleContext(ParamsContext.class,i);
		}
		public List<TerminalNode> RPAREN() { return getTokens(PatitoParser.RPAREN); }
		public TerminalNode RPAREN(int i) {
			return getToken(PatitoParser.RPAREN, i);
		}
		public List<Func_bodyContext> func_body() {
			return getRuleContexts(Func_bodyContext.class);
		}
		public Func_bodyContext func_body(int i) {
			return getRuleContext(Func_bodyContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(PatitoParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(PatitoParser.SEMICOLON, i);
		}
		public FuncsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PatitoListener ) ((PatitoListener)listener).enterFuncs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PatitoListener ) ((PatitoListener)listener).exitFuncs(this);
		}
	}

	public final FuncsContext funcs() throws RecognitionException {
		FuncsContext _localctx = new FuncsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_funcs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 224L) != 0)) {
				{
				{
				setState(89);
				typo_fun();
				setState(90);
				match(ID);
				setState(91);
				match(LPAREN);
				setState(92);
				params();
				setState(93);
				match(RPAREN);
				setState(94);
				func_body();
				setState(95);
				match(SEMICOLON);
				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Typo_funContext extends ParserRuleContext {
		public TerminalNode KW_NULA() { return getToken(PatitoParser.KW_NULA, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public Typo_funContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typo_fun; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PatitoListener ) ((PatitoListener)listener).enterTypo_fun(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PatitoListener ) ((PatitoListener)listener).exitTypo_fun(this);
		}
	}

	public final Typo_funContext typo_fun() throws RecognitionException {
		Typo_funContext _localctx = new Typo_funContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_typo_fun);
		try {
			setState(104);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KW_NULA:
				enterOuterAlt(_localctx, 1);
				{
				setState(102);
				match(KW_NULA);
				}
				break;
			case KW_ENTERO:
			case KW_FLOTANTE:
				enterOuterAlt(_localctx, 2);
				{
				setState(103);
				tipo();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamsContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(PatitoParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PatitoParser.ID, i);
		}
		public List<TerminalNode> COLON() { return getTokens(PatitoParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(PatitoParser.COLON, i);
		}
		public List<TipoContext> tipo() {
			return getRuleContexts(TipoContext.class);
		}
		public TipoContext tipo(int i) {
			return getRuleContext(TipoContext.class,i);
		}
		public List<TerminalNode> COMA() { return getTokens(PatitoParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(PatitoParser.COMA, i);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PatitoListener ) ((PatitoListener)listener).enterParams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PatitoListener ) ((PatitoListener)listener).exitParams(this);
		}
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_params);
		int _la;
		try {
			setState(119);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				match(ID);
				setState(107);
				match(COLON);
				setState(108);
				tipo();
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMA) {
					{
					{
					setState(109);
					match(COMA);
					setState(110);
					match(ID);
					setState(111);
					match(COLON);
					setState(112);
					tipo();
					}
					}
					setState(117);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case RPAREN:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Func_bodyContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(PatitoParser.LBRACE, 0); }
		public VarsContext vars() {
			return getRuleContext(VarsContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(PatitoParser.RBRACE, 0); }
		public List<EstatutoContext> estatuto() {
			return getRuleContexts(EstatutoContext.class);
		}
		public EstatutoContext estatuto(int i) {
			return getRuleContext(EstatutoContext.class,i);
		}
		public Func_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PatitoListener ) ((PatitoListener)listener).enterFunc_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PatitoListener ) ((PatitoListener)listener).exitFunc_body(this);
		}
	}

	public final Func_bodyContext func_body() throws RecognitionException {
		Func_bodyContext _localctx = new Func_bodyContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_func_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(LBRACE);
			setState(122);
			vars();
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2147489024L) != 0)) {
				{
				{
				setState(123);
				estatuto();
				}
				}
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(129);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CuerpoContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(PatitoParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(PatitoParser.RBRACE, 0); }
		public List<EstatutoContext> estatuto() {
			return getRuleContexts(EstatutoContext.class);
		}
		public EstatutoContext estatuto(int i) {
			return getRuleContext(EstatutoContext.class,i);
		}
		public CuerpoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cuerpo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PatitoListener ) ((PatitoListener)listener).enterCuerpo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PatitoListener ) ((PatitoListener)listener).exitCuerpo(this);
		}
	}

	public final CuerpoContext cuerpo() throws RecognitionException {
		CuerpoContext _localctx = new CuerpoContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_cuerpo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(LBRACE);
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2147489024L) != 0)) {
				{
				{
				setState(132);
				estatuto();
				}
				}
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(138);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
